spacing fix

--- a/haxe/ui/backend/pdcurses/_module/styles/main.css
+++ b/haxe/ui/backend/pdcurses/_module/styles/main.css
@@ -3,7 +3,7 @@
 }
 
 .vbox {
-    vertical-spacing: 0;
+    vertical-spacing: 1px;
 }
 
 .grid {
